--- a/index.qmd
+++ b/index.qmd
@@ -65,10 +65,11 @@ pacman::p_load(tidyverse,
                tigris)
 
 options(readr.show_progress = FALSE)
-options(readr.show_progress = FALSE)
 options(tigris_progress = FALSE)
 sf::sf_use_s2(FALSE)      # optional, disables spherical geometry engine, may help
 options(sf.show_progress = FALSE)  # this is the key
+options(cli.default_handler = function(...) invisible())
+options(tigris_use_cache = TRUE)
 ```
 
 ```{r}
